--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-rev": "~0.1.0"
+    "grunt-rev": "~0.1.0",
+    "grunt-git": "~0.2.4"
   },
   "engines": {
     "node": ">=0.10.0"
