--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-usemin": "~2.0.2",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-manifest": "~0.4.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-rev": "~0.1.0",
-    "grunt-replace": "~0.6.1"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-jshint": "^0.11.1",
+    "grunt-contrib-uglify": "^0.8.1",
+    "grunt-manifest": "^0.4.0",
+    "grunt-replace": "^0.8.0",
+    "grunt-rev": "^0.1.0",
+    "grunt-usemin": "*"
   },
   "engines": {
     "node": ">=0.10.0"
