--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-cssmin": "*",
-    "grunt-contrib-jshint": "^0.11.1",
-    "grunt-contrib-uglify": "^0.8.1",
-    "grunt-manifest": "^0.4.0",
-    "grunt-replace": "^0.8.0",
-    "grunt-rev": "^0.1.0",
+    "grunt-contrib-jshint": "~0.11.1",
+    "grunt-contrib-uglify": "~0.8.1",
+    "grunt-manifest": "~0.4.0",
+    "grunt-replace": "~0.8.0",
+    "grunt-rev": "~0.1.0",
     "grunt-usemin": "*"
   },
   "engines": {
