Update domain references

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "BlockDrop",
   "version": "1.0.0",
-  "homepage": "http://gh.bkbooth.com.au/BlockDrop",
+  "homepage": "https://blockdrop.benbooth.co",
   "authors": [
     "Ben Booth <bkbooth@gmail.com>"
   ],
