--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Ben Booth",
     "email": "bkbooth@gmail.com",
-    "url": "http://bkbooth.com.au"
+    "url": "https://benbooth.co"
   },
   "keywords": [
     "Tetris",
